force-app/main/default/objects/Re_Plastic_Innovations_Restock_Request__c/Re_Plastic_Innovations_Restock_Request__c.object-meta.xml
<CustomObject>
    <label>Re Plastic Innovations Restock Request</label>
    <nameField>
        <displayFormat>RQST-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Re Plastic Innovations Restock Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>