force-app/main/default/objects/Re_Plastic_Innovations_Restock_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product to restock</description>
    <inlineHelpText>Product to restock</inlineHelpText>
    <label>Product</label>
    <referenceTo>Re_Plastic_Innovations_Recycled_Product__c</referenceTo>
    <relationshipLabel>Re Plastic Innovations Restock Requests</relationshipLabel>
    <relationshipName>Re_Plastic_Innovations_Restock_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>