force-app/main/default/objects/Re_Plastic_Innovations_Restock_Request__c/fields/Requested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Quantity__c</fullName>
    <description>Quantity requested</description>
    <inlineHelpText>Quantity requested</inlineHelpText>
    <label>Requested Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>