force-app/main/default/objects/Re_Plastic_Innovations_Restock_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>[&quot;Pending&quot;, &quot;Approved&quot;, &quot;Completed&quot;]</description>
    <inlineHelpText>[&quot;Pending&quot;, &quot;Approved&quot;, &quot;Completed&quot;]</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>